# candle-ocr-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
app/: index.html  package.json  pnpm-lock.yaml  vite.config.js
app/src/: App.svelte  Canvas.svelte  SelectCanvas.svelte  app.css
src/: main.rs  model.rs
