[package]
name = "candle-ocr-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle-ocr-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/huggingface/candle" }
candle-examples = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
futures-util = "0.3.29"
glob = "0.3.1"
hf-hub = "0.3.2"
image = "0.24.7"
poem = { version = "1.3.58", features = ["sse", "multipart"] }
serde = "1.0.190"
serde_json = "1.0.108"
tokenizers = { version = "0.13.4", default-features = false }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.17"
